@@ -3,6 +3,9 @@
   ChangeLog.txt for libSUFR
   
   
+    7: AstroFloyd, 5/10/2010
+      - Added statistics.f90
+      
     6: AstroFloyd, 5/10/2010
       - Converting libAF git repository, 8/09/2010:
 	- updated constants.f90
